[package]
name = "cartpole"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.29", features = ["wgpu"] }
egui = "0.29"
burn = { version = "0.16", default-features = false, features = ["wgpu", "autodiff", "std"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time"] }
flume = "0.11"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
